add symbolic reasoning tutorial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "accelerate>=1.6.0",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
+    "networkx>=3.4.2",
+    "numpy>=2.2.4",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
     "requests>=2.32.3",
