--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=2.2.4",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
+    "rdflib>=7.1.4",
     "requests>=2.32.3",
     "timm>=1.0.15",
     "torch>=2.6.0",
